[project]
name = "supermario-gym-ai"
version = "0.1.0"
description = ""
authors = [
    {name = "gab-25",email = "gabrielesorci.25@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "gymnasium>=0.29.1",
    "stable-baselines3>=2.3.0",
    "gym-super-mario-bros==7.4.0",
    "nes-py==8.2.1",
    "shimmy>=1.3.0",
    "opencv-python>=4.8.0",
    "tensorboard>=2.15.0",
    "numpy<2.0.0",
]

[project.scripts]
supermario-gym-ai = 'supermario_gym_ai.main:run'


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
